[package]
name = "url-wrapper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = [".", "entity", "migration"]

[dependencies]
futures = "0.3"
clap = { version = "3.1", features = ["derive", "env"]}
tokio = { version = "1.14", features = ["full"] }
axum = { version = "0.3.4", features = ["tower-log"] }
sea-orm = "0.7"
tower = "0.4.11"
tower-http = { version = "0.2", features = ["fs"] }
tower-cookies = { version = "0.4" }
anyhow = "1"
dotenv = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait = "0.1.51"
env_logger = "0.9.0"
itertools = "0.10.1"
log = "0.4.14"
rand = "0.8.4"
thiserror = "1.0.30"
entity = { path = "entity" }
migration = { path = "migration" }
