[package]
name = "link-lockit"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = [".", "entity", "migration"]

[dependencies]
clap = { version = "3.1", features = ["derive", "env"]}
tokio = { version = "1.14", features = ["full"] }
axum = { version = "0.5", features = ["tower-log"] }
sea-orm = "0.7"
tower = "0.4.11"
tower-http = { version = "0.2", features = ["fs"] }
anyhow = "1"
dotenv = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
env_logger = "0.9.0"
log = "0.4.14"
urlencoding = "2.1.0"
chrono = "0.4"
reqwest = { version = "0.11"}
utoipa = "1.0.2"
utoipa-swagger-ui = "1.0.0"
hyper = "0.14.18"
entity = { path = "entity" }
migration = { path = "migration" }
